tests/ui/fail_unmatched_open.stderr
error: invalid template literal
 --> tests/ui/fail_unmatched_open.rs:3:12
  |
3 |     value: "Hello {",
  |            ^^^^^^^^^
