tests/ui/fail_unmatched_open.rs
rusty18n::define_i18n_fallback! {
    FailUnmatchedOpen => en
    value: "Hello {",
}

fn main() {}
